# birdclient

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
birdclient/: __init__.py  exceptions.py  version.py
src/birdclient/: __init__.py  exceptions.py  version.py
tests/: basetests.py  conftest.py  test_birdclient.py  test_show_protocol6.txt  test_show_protocols.txt  test_show_route_table_t_bgp4.txt  test_show_route_table_t_bgp6.txt  test_show_route_table_t_direct6.txt  test_show_route_table_t_kernel4.txt  test_show_route_table_t_kernel6.txt  test_show_route_table_t_ospf4.txt  test_show_route_table_t_ospf6-1.txt  test_show_route_table_t_ospf6-2.txt  test_show_route_table_t_rip4.txt  test_show_route_table_t_static4.txt  test_show_route_table_t_static6.txt
tests/t10_status/: test_show_status.py  test_show_status.txt
tests/t20_tables/t10_direct/: test_show_t_direct4.py  test_show_t_direct4.txt  test_show_t_direct6.py
tests/t20_tables/t20_kernel/: __init__.py  test_show_t_kernel4.py  test_show_t_kernel4.txt  test_show_t_kernel4v3.py  test_show_t_kernel4v3.txt  test_show_t_kernel6.py  test_show_t_kernel6.txt
tests/t20_tables/t30_static/: __init__.py  test_show_t_static4.py  test_show_t_static4v3.py  test_show_t_static4v3.txt  test_show_t_static6.py  test_show_t_static6.txt
tests/t20_tables/t40_rip/: test_show_t_rip4.py  test_show_t_rip4v3.py  test_show_t_rip4v3.txt  test_show_t_rip6.py  test_show_t_rip6.txt
tests/t20_tables/t50_ospf/: __init__.py  test_show_t_ospf4.py  test_show_t_ospf4.txt  test_show_t_ospf4v3.py  test_show_t_ospf4v3.txt  test_show_t_ospf4v3b.py  test_show_t_ospf4v3b.txt  test_show_t_ospf6_1.py  test_show_t_ospf6_1.txt  test_show_t_ospf6_2.py
tests/t20_tables/t60_bgp/: test_show_t_bgp4.py  test_show_t_bgp4.txt  test_show_t_bgp4_with_blackhole.py  test_show_t_bgp4_with_blackhole.txt  test_show_t_bgp4v3.py  test_show_t_bgp4v3.txt  test_show_t_bgp4v3b.py  test_show_t_bgp4v3b.txt  test_show_t_bgp6.py  test_show_t_bgp6.txt  test_show_t_roa4-multiple.py  test_show_t_roa4.py  test_show_t_roa4.txt  test_show_t_roa4_multiple.py  test_show_t_roa4_multiple.txt  test_show_t_roa6-multiple.py  test_show_t_roa6.py  test_show_t_roa6.txt  test_show_t_roa6_multiple.py  test_show_t_roa6_multiple.txt
tests/t30_protocols/: __init__.py  test_show_protocol4.py  test_show_protocol4.txt  test_show_protocol4_down.py  test_show_protocol4_down.txt  test_show_protocol6.py  test_show_protocol6_down.py  test_show_protocol6_down.txt  test_show_protocols.py  test_show_protocols.txt  test_show_protocols_down.py  test_show_protocols_down.txt
