[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "birdclient"
description = "The birdclient package provides a BIRD client implemented in Python."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
	{ name = "Nigel Kukard", email = "nkukard@LBSD.net" }
]
keywords = ["library", "networking", "bird"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://gitlab.oscdev.io/software/birdclient"
"Issue Tracker" = "https://gitlab.oscdev.io/software/birdclient/-/issues"
"Source Code" = "https://gitlab.oscdev.io/software/birdclient"
Documentation = "https://software.pages.oscdev.io/birdclient"


[tox]
isolated_build = true


[tool.poetry]
name = "birdclient"
#version = "x.x.x"
description = "The birdclient package provides a BIRD client implemented in Python."
authors = ["Nigel Kukard <nkukard@LBSD.net>"]
packages = [
    { include = "birdclient" }
]


[tool.black]
line-length = 132


[tool.isort]
line_length = 120
profile = "black"


[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 132
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D202", "D203", "D211", "D212", "EM101", "EM102", "ISC001", "TID252", "TRY003"]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings
docstring-code-format = true


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.coverage.run]
source_pkgs = ["birdclient"]
relative_files = true
